--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="selected_type_is_not_to_be_changed">Selected type is not to be changed</string>
     <string name="hire">Hire</string>
     <string name="work">Work</string>
+    <string name="resend_code">If you haven’t received the e-mail click Resend code</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="terms_of_service">By clicking \'\'Create Account\'\' I agree to BloomWalls Terms of Service</string>
     <string name="sign_up_to_work">Sign up to work</string>
 
 
